--- a/WebApp/Views/User/Index.cshtml
+++ b/WebApp/Views/User/Index.cshtml
@@ -38,7 +38,7 @@
                         @if (User.IsInRole("Admin"))
                         {
                             <button type="button"
-                                    class="ml-4 rounded-md bg-[#7A1515] px-4 py-2 font-semibold text-white hover:bg-[#A53D3D]">
+                                    class="ml-4 rounded-md bg-[#7A1515] px-4 py-2 font-semibold text-white hover:bg-[#A53D3D]" data-toggle="modal" data-target="#addUserModal">
                                 <i class="fas fa-plus"></i> Add User
                             </button>
                         }
