--- a/WebApp/Views/User/Index.cshtml
+++ b/WebApp/Views/User/Index.cshtml
@@ -165,7 +165,7 @@
 
                                         <td class="px-6 py-3 text-center">
                                             <div class="relative">
-                                                <button data-userid="@item.UserId" class="actionDropdownBtn cursor-pointer text-black hover:text-[#A53D3D] focus:outline-none">
+                                                <button data-userid="@item.UserId" class="actionDropdownBtn cursor-pointer text-black hover:text-[#A53D3D] focus:outline-none px-6">
                                                     <i class="fas fa-ellipsis-v"></i>
                                                 </button>
 
