--- a/WebApp/Views/Shared/_Header.cshtml
+++ b/WebApp/Views/Shared/_Header.cshtml
@@ -84,7 +84,7 @@
     </div>
 
     <!-- Mobile menu -->
-    <div class="hidden md:hidden" id="mobile-menu">
+    @*<div class="hidden md:hidden" id="mobile-menu">
         <div class="space-y-1 pb-3 pt-2">
             <a href="@Url.Action("Index", "Home")" class="block px-3 py-2 text-base font-medium text-[#743030] hover:bg-gray-50">
                 Home
@@ -135,7 +135,7 @@
                 </div>
             }
         </div>
-    </div>
+    </div>*@
 </nav>
 
 <script>
