Modified user management table and drafted Find Job page.

--- a/WebApp/Views/Account/_RegisterModal.cshtml
+++ b/WebApp/Views/Account/_RegisterModal.cshtml
@@ -74,7 +74,7 @@
                 <div class="modal-footer flex w-full items-center justify-between">
                     <div class="flex w-full items-center">
                         <input type="checkbox"  id="roleCheckbox" asp-for="AsRecruiter" value="true"
-                               class="h-5 w-5 cursor-pointer appearance-none rounded border-[#7A1515] transition-all duration-300 checked:border-[#7A1515] focus:ring-2 focus:ring-[#991b1b] required:checked:bg-[#7A1515]" />
+                               class="h-5 w-5 cursor-pointer rounded border-[#7A1515] transition-all duration-300 checked:border-[#7A1515] focus:ring-2 focus:ring-[#991b1b] required:checked:bg-[#7A1515]"/>
                         <label for="roleCheckbox" class="ml-2 cursor-pointer pt-2 font-bold text-[#7A1515]">Apply as recruiter</label>
                     </div>
 
